Update Artists “2019-10-09-atish”

--- a/content/artists/2019-10-09-atish.md
+++ b/content/artists/2019-10-09-atish.md
@@ -1,6 +1,7 @@
 ---
 template: ArtistPost
 title: "Atish "
+gigwellID: "641"
 featuredImage: https://ucarecdn.com/3c725c53-b45f-49b6-bb50-d14105b43956/-/crop/1078x389/86,0/-/preview/
 upcomingshows: >
   Thu, 17 Oct 2019 Manjumasi + Listed Amsterdam Showcase at Duke Of Tokyo,
