--- a/content/artists/2019-10-16-dory.md
+++ b/content/artists/2019-10-16-dory.md
@@ -1,6 +1,7 @@
 ---
 template: ArtistPost
 title: Dory
+gigwellID: "653"
 featuredImage: 'https://ucarecdn.com/780eec47-74cd-4fa6-89bd-86e25ed724ec/'
 upcomingshows: |-
   Thu, 17 Oct 2019 /
