--- a/content/artists/2019-10-17-kmln.md
+++ b/content/artists/2019-10-17-kmln.md
@@ -1,6 +1,7 @@
 ---
 template: ArtistPost
 title: "KMLN "
+gigwellID: "96720"
 featuredImage: https://ucarecdn.com/53bab04b-82f5-4cb1-baa3-99a3e58a5704/-/crop/1077x389/85,0/-/preview/
 upcomingshows: >-
   Amsterdam
