--- a/content/artists/2019-10-17-mr-c.md
+++ b/content/artists/2019-10-17-mr-c.md
@@ -1,6 +1,7 @@
 ---
 template: ArtistPost
 title: "Mr. C "
+gigwellID: "171352"
 featuredImage: https://ucarecdn.com/37948408-e440-4cab-b5ea-d56c5d8b943e/-/crop/1070x389/89,0/-/preview/
 upcomingshows: >+
   Fri, 18 Oct 2019 /
