--- a/content/artists/2019-10-17-naveen-g.md
+++ b/content/artists/2019-10-17-naveen-g.md
@@ -1,6 +1,7 @@
 ---
 template: ArtistPost
 title: Naveen G
+gigwellID: "666"
 featuredImage: https://ucarecdn.com/818a7339-1a41-4ed7-940f-de12d41e991e/-/crop/1060x389/94,0/-/preview/
 upcomingshows: >-
   Sat, 02 Nov 2019 /
