--- a/content/artists/2019-10-17-nikita.md
+++ b/content/artists/2019-10-17-nikita.md
@@ -1,6 +1,7 @@
 ---
 template: ArtistPost
 title: Nikita
+gigwellID: "667"
 featuredImage: >-
   https://ucarecdn.com/91ad8713-bc76-416f-bc32-31083ff02396/-/crop/1074x389/85,0/-/preview/
 upcomingshows: >-
