--- a/content/artists/2020-02-29-holmar.md
+++ b/content/artists/2020-02-29-holmar.md
@@ -1,6 +1,7 @@
 ---
 template: ArtistPost
 title: "Holmar aka Acid Tourist "
+gigwellID: "254689"
 featuredImage: https://ucarecdn.com/c7ad9872-6efc-435f-b5bc-3c7e5b831b6a/
 upcomingshows: >-
   Wed, 11 Mar 2020 /
