--- a/content/artists/2020-03-01-galen.md
+++ b/content/artists/2020-03-01-galen.md
@@ -1,6 +1,7 @@
 ---
 template: ArtistPost
 title: "Galen "
+gigwellID: "314181"
 featuredImage: https://ucarecdn.com/824eafae-0692-4ea8-8a67-811d3cc9385d/
 upcomingshows: >-
   Wed, 01 Apr 2020 /
