--- a/content/artists/2020-03-01-nitin.md
+++ b/content/artists/2020-03-01-nitin.md
@@ -1,6 +1,7 @@
 ---
 template: ArtistPost
 title: "Nitin "
+gigwellID: "294918"
 featuredImage: https://ucarecdn.com/6bf3665b-4bdb-40f4-97df-f391ccca63f0/
 upcomingshows: |-
   Wed, 18 Mar 2020 /
